# CVE_DataMining_Research

./: .gitignore  CMakeLists.txt  CWEWithTree  README.md  Stats  Time  example.html  filelist.txt
Reports/: Status-Report-2016-06-19.markdown  Time related report.docx  progress-report-2016-06-19.markdown  progress-report-weaknessees-with-time.docx
Reports/CPE Platform/: CPEwithTime.docx  Statistical Summary.xlsx
include/: CSVWriter.h  JsonHelper.h  app.h  cli.h  progressBar.h  test.cpp
include/rapidxml/: a.out
rawdata/cwe/: 1.json  10.json  100.json  1001.json  1002.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  133.json  (+918 more)
scripts/: #miner.rb#  cwe_node.rb  cwe_tree_mine.rb  downloadcweall.rb  miner.rb  progressbar.rb
src/: JsonHelper.cpp  app.cpp  completeTable.cpp  dataServer.cpp  preliminaryStats.cpp  timeCAPEC.cpp  timeCPE.cpp  timeWeakness.cpp  treeWeakness.cpp
statistics/: 4_Bin_Weaknesses  4_Bin_Weaknesses.csv  CWE_structure.csv  CWEwithTree.csv  allTimeWeaknesses  allTimeWeaknesses.csv  overtimeconsistent.csv  tree_fiedCWE.csv
statistics/CAPECwithTime/: 2001.csv  2006.csv  2011.csv  2016.csv  4_Bin.csv  alltimes.csv  overtimeconsistent.csv
statistics/CPEwithTime/: overtimeconsistent.csv
statistics/CPEwithTime/mergedVersion/: 4_Bin.csv  alltimes.csv  bin1995.csv  bin2001.csv  bin2002.csv  bin2006.csv  bin2009.csv  bin2011.csv  bin2016.csv  (+1 more)
statistics/CWEwithTime/: 2001.csv  2006.csv  2011.csv  2016.csv  allTime.csv  overtimeconsistent.csv
statistics/graph/: .Rhistory  matrix_CWE_graph_structure.r
(+9 files in other folders)
